# lora-router

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_benchmark.py
benchmarks/configs/: flan_v2.yaml
docs/: LEARNING.md  PLAN.md
docs/research/: competitive_analysis.md
scripts/: download_flan_adapters.py  prepare_test_data.py  run_full_benchmark.py  runpod_setup.sh
src/lora_router/: __init__.py  registry.py  router.py  types.py
src/lora_router/composition/: __init__.py  composer.py  merger.py
src/lora_router/eval/: __init__.py  benchmarks.py  metrics.py  report.py
src/lora_router/inference/: __init__.py  engine.py
src/lora_router/middleware/: __init__.py
src/lora_router/strategies/: __init__.py  base.py  classifier.py  ensemble.py  seqr.py  similarity.py  utils.py
tests/: conftest.py
tests/unit/: test_benchmarks.py  test_classifier.py  test_composer.py  test_engine.py  test_ensemble.py  test_merger.py  test_metrics.py  test_registry.py  test_report.py  test_router.py  test_seqr.py  test_similarity.py  test_types.py
